almost finished all Radaelli's comments

--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -181,12 +181,10 @@ This brings me, finally, to my Mother and Father, whom I can not thank enough fo
 \tableofcontents
 \mainmatter
 % \Include{Introduction}
-
 % \Include{Rashba}
 % \Include{GdMn2O5}
-\Include{Cr}
-
-% \Include{Softening}
+% \Include{Cr}
+\Include{Softening}
 % \appendix
 % \Include{DFT}
 % \Include{Wannier}
