--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -66,7 +66,7 @@ Its contribution to the free energy density can be written as:
 	f_{q}=-q_{ijkl}\varepsilon_{ij}P_{k}P_{l},
 \end{equation}
 where $q_{ijkl}$ denotes the strength of the coupling, the indices $i, j, k, l$ again iterate through $x, y, z$, and Einstein summation over repeated indices is implied.
-The longitudinal part, $q_{iiii} \varepsilon_{ii} (P_i)^2$, leads to the largest contribution to the strain, causing a tensile strain ($\varepsilon_{ii}>0$) and a stretching of the material along $P_i$~\cite{Marton2010}.
+The longitudinal part, $q_{iiii} \varepsilon_{ii} (P_i)^2$, usually leads to the largest contribution to the strain, causing a tensile strain ($\varepsilon_{ii}>0$) and a stretching of the material along $P_i$~\cite{Marton2010}.
 
 Due to the high degree of symmetry in crystals, many equivalent orientations of $P$ are possible, each with an associated strain. The DWs separating these are equally numerous and have a distinct strain texture due to the variation of $P$ across the DW.
 
@@ -111,7 +111,7 @@ In PFM, the mechanical response of an electrically conductive tip in contact wit
 Because of the piezoelectricity that is present in any ferroelectric material, this AC field leads to a periodic expansion and contraction of the sample, which is detected through the deflection of a laser beam that shines on the cantilever that holds the tip.
 As we will discuss further below (see \ref{sec:BTO_piezoelectricity}), the piezoelectric coefficients have opposite signs for the up versus down polarized domains, meaning that the phase of the oscillation can be measured as a probe for the orientation of the polarization.
 These phases are exactly what is shown in panels (a,c) of Fig.~\ref{fig:BTO_experiment}. The amplitude of the oscillation gives an idea of the absolute value of the polarization, which leads to the darker regions of the DWs in panel (d) of the same figure.
-Since the PFM measurements are performed for an out-of-plane direction, the signature of the in--plane polarization in the bottom right domain of panels (c-f) in Fig.~\ref{fig:BTO_experiment} is rather a measure of the noise of the technique rather than an actual orientation of the polarization.
+Since the PFM measurements are performed for an out-of-plane direction, the variations in the color signature of the in--plane polarization in the bottom right domain of panels (c-f) in Fig.~\ref{fig:BTO_experiment} is an indication of the noise of the measurements rather than an actual orientation of the polarization, since any in-plane direction should result in the same angle.
 In order to accurately map the in--plane polarized domains, one would have to use PFM in a perpendicular configuration, however, we are mostly interested in the out-of-plane polarization domains so these latter were omitted in these experiments.
 
 Turning back to the analysis of the domains in Fig.~\ref{fig:BTO_experiment}, we can identify multiple different kinds: in the region shown in panels (a,b) domains with out-of-plane ($c$-direction) polarization are found, whereas panels (c-f) display a more complex region with both out-of-plane and in--plane ($a$-direction) polarization.
@@ -121,7 +121,7 @@ On the boundary between these two regions, we find a 90$^\circ$ twin DW, which i
 
 \begin{figure}
 	\IncludeGraphics{experiment.png}
-	\caption{\label{fig:BTO_experiment} {\bf Experimental Measurements} Two regions of the BTO sample are characterized. Panels (a,b) show a region with mostly straight DWs. Panels (c-f) show a more complex region with bubble domains, and a twin wall separating the top-left area with out-of-plane polarization from the bottom right area with in-plane polarization (along the $a$-direction). Panels (a,c) show the PFM phase, panel (d) the out-of-plane PFM amplitude, and panel (f) displays a schematic representation of the polarization, reconstructed from these measurements. Panels (b,e) show the CRFM measurements, demonstrating softer DW regions (brown) and stiffer domains (purple). The red vectors denote the orientation of the polarization, and the numbers at the DWs denote the angle between the polarization of the neighboring domains.}
+	\caption{\label{fig:BTO_experiment} {\bf Experimental Measurements} Two regions of the BTO sample are characterized. Panels (a,b) show a region with mostly straight DWs. Panels (c-f) show a more complex region with bubble domains, and a twin wall separating the top-left area with out-of-plane polarization from the bottom right area with in-plane polarization (along the $a$-direction). Panels (a,c) show the PFM phase, and panels (b,d) the CRFM measurements demonstrating softer DW regions (brown) and stiffer domains (purple). Panel (e) shows the out-of-plane PFM amplitude, and panel (f) displays a schematic representation of the polarization, reconstructed from these measurements. The red vectors indicate some orientations of the polarization, and the numbers at the DWs denote the angle between the polarization of the neighboring domains.}
 \end{figure}
 
 In order to probe the spatial variation of the stiffness of the sample, measurements based on contact resonance frequency microscopy (CRFM) were performed.
@@ -165,7 +165,7 @@ Z^*_{\kappa, \gamma\alpha} = Z_{\kappa} \delta_{\gamma\alpha} + \Delta Z_{\kappa
 \end{equation}
 There are thus two contributions: $Z_{\kappa}$ is the ionic charge of the atom, and $\Delta Z_{\kappa, \gamma\alpha}$ is the electronic contribution due to the displacement.
 $Z_{\kappa}$ is then equal to +2 for Ba, +4 for Ti, and -2 for O, if the electron charge is taken to be -1.
-From the DFT calculations, it was found that the electronic contribution $\Delta Z_{\kappa, \gamma\alpha}$ due hybridization is quite significant.
+From the DFT calculations, it was found that the electronic contribution $\Delta Z_{\kappa, \gamma\alpha}$ due to hybridization is quite significant.
 This leads to the total Born effective charges for Ti and O to be $Z^* = 7.29$, and $Z^*_{||} = -5.75$, respectively.
 The $||$ in the latter denotes that the value was calculated for a movement of the oxygen along the O--Ti bond.
 These large electronic contributions stem from the strong variation of the hybridization between O $2p$ and Ti $3d$ orbitals as the atoms are displaced.
@@ -227,14 +227,14 @@ For example $C_{xxxx} = C_{yyyy} = C_{zzzz}$, and $C_{xyxy} = C_{yxyx} = C_{yzyz
 	 $\alpha_{11}$ & $4.68 \cdot 10^6 (T-393) - 2.02 \cdot 10^8$ Jm$^5$C$^{-4}$& $G_{12}$ & $-2 \cdot 10^{-11}$ & $q_{12}$ & $-0.74 \cdot 10^{9}$ \\
 	 $\alpha_{12}$ & $3.23 \cdot 10^8$ Jm$^5$C$^{-4}$ & $G_{44}$ & $2 \cdot 10^{-11}$  & $q_{44}$ & $1.57 \cdot 10^{9}$ \\
 	 \cline{3-6}
-	 & & $C$ &Jm$^{-3}$ & $f$ & m$^{-1}$C\\
-	 \cline{3-6}
-	 $\alpha_{111}$ & $-5.52 \cdot 10^7 (T - 393) + 2.76 \cdot 10^6 $ Jm$^9$C$^{-4}$ & $C_{11}$ & $27.5 \cdot 10^{10}$ & $f_{11}$ & $0.85$ \\
-	 $\alpha_{112}$ &  $4.47 \cdot 10^9 $Jm$^9$C$^{-4}$  & $C_{12}$ & $17.9 \cdot 10^{10}$ & $f_{12}$ & $-0.5$  \\
-	 $\alpha_{123}$ & $4.91 \cdot 10^9$Jm$^9$C$^{-4}$  &$C_{44}$ & $5.43 \cdot 10^{10}$ & $f_{44}$ & $ 0.072$ \\
-	 \hline
+	 & & $C$ &Jm$^{-3}$\\
+	 \cline{3-4}
+	 $\alpha_{111}$ & $-5.52 \cdot 10^7 (T - 393) + 2.76 \cdot 10^6 $ Jm$^9$C$^{-4}$ & $C_{11}$ & $27.5 \cdot 10^{10}$\\
+	 $\alpha_{112}$ &  $4.47 \cdot 10^9 $Jm$^9$C$^{-4}$  & $C_{12}$ & $17.9 \cdot 10^{10}$\\
+	 $\alpha_{123}$ & $4.91 \cdot 10^9$Jm$^9$C$^{-4}$  &$C_{44}$ & $5.43 \cdot 10^{10}$\\
+	 \cline{1-4}
 \end{tabular}
-\caption{{\bf GLD model parameters for BTO.} Voigt notation \cite{Voigt} is used to limit the amount of indices, e.g. $C_{11} = C_{zzzz}$, $C_{12} = C_{xxzz}$ and $C_{44}= C_{xzxz}$.  All parameters are reported in SI units, and T = 300 in the simulations.\label{tab:BTO_param}}
+\caption{{\bf GLD model parameters for BTO.} Voigt notation \cite{Voigt} is used to limit the amount of indices, e.g. $C_{11} = C_{zzzz}$, $C_{12} = C_{xxzz}$ and $C_{44}= C_{xzxz}$.  All coefficients are taken from Ref.~\cite{Marton2010}. The temperature T is taken to be 300 K in the simulations.\label{tab:BTO_param}}
 \end{table}
 To find the static equilibrium state in the most general sense, the integrated free energy $F[P,\varepsilon] = \int d^3x \,f[P(x), \varepsilon(x)])$ needs to be minimized, for which the variational method can be used.
 This leads to the well-known Euler-Lagrange equations \cite{Cao1991, Marton2010}:
