implemented last comments of radaelli

--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -95,13 +95,16 @@ A similar softening has been previously observed and studied for ferroelastic DW
 One reason is that the width of 180$^\circ$ DWs is on the order of a couple of unit cells (5 - 20 \AA \cite{Zhirnov1959}), and since they do not separate domains with different strains, they were perceived too small to be detected by mechanical means.
 This is because these studies usually involve the application of a tip to the surface of the sample, and the contact radius of such a tip is at least 100 unit cells.
 As mentioned before, however, even 180$^\circ$ DWs have a distinct strain texture associated with them, which extends much further than the narrow region in which the polarization reverses.
-This texture can be picked up mechanically by the applied tip and ultimately allows one to make the observations that will be discussed in the next section, and are at the base of the research presented in this chapter.
+This texture can be picked up mechanically by the applied tip and ultimately allows one to make the experimental observations that will be discussed in the next section, which were the impetus of the research presented in this chapter.
 
-Afterward, we continue with a short overview of the crystalline properties of BaTiO$_3$ in Sec.~\ref{sec:BTO_crystal}, an archetypal example of a ferroelectric perovskite.
+From the practical point of view, this mechanical detection of ferroelectric DWs means that they can be probed without applying a bias voltage, which may prove useful for conducting ferroelectrics. Moreover, since phonon spectra are determined by the stiffness of the material, the softer DWs will harbor phonon modes with lower speeds. In turn, this may result in effects such as phonon refraction or even total internal reflection inside the walls, turning the DWs into ``phonon waveguides''. Because heat is transported by phonons, this would allow for heat propagation through the DWs with little dissipation. From the ability to create and destroy 180$^\circ$ DWs by voltage, regular patterns with internal elastic contrast could be created, effectively leading to a phononic crystal.
+This is interesting, since periodically poled ferroelectric crystals are already used in photonic applications \cite{Ferraro2014}.
+
+We start in Sec.~\ref{sec:BTO_exp} by introducing the experimental techniques and observations that lie at the base of this chapter. Afterwards, we continue with a short overview of the crystalline properties of BaTiO$_3$ in Sec.~\ref{sec:BTO_crystal}, an archetypal example of a ferroelectric perovskite.
 This is followed by a detailed theoretical study in Sec.~\ref{sec:BTO_theory}, a description of our numerical simulations in Sec.~\ref{sec:BTO_methods}, and a discussion of the obtained results in Sec.~\ref{sec:BTO_results}.
 Finally, we conclude by summarizing the results in Sec.~\ref{sec:BTO_conclusion}.
 
-\section{Experimental methods and results}
+\section{Experimental methods and results \label{sec:BTO_exp}}
 In this section, we summarize the experiments performed by the group of Prof. Catalan that were the impetus of this research \cite{Stefani2020}.
 In order to determine the generality of the DW softening, three single crystal samples were studied: LiNbO$_3$, BaTiO$_3$, and PbTiO$_3$. It was found that all three show the same behavior, allowing us to focus on BaTiO$_3$ (BTO).
 The results of the experimental measurements are shown in Fig.~\ref{fig:BTO_experiment}.
