--- a/papers/references.bib
+++ b/papers/references.bib
@@ -6892,3 +6892,17 @@ volume = {122},
 year = {2017}
 }
 
+@book{Ferraro2014,
+address = {Berlin, Heidelberg},
+doi = {10.1007/978-3-642-41086-4},
+editor = {Ferraro, Pietro and Grilli, Simonetta and {De Natale}, Paolo},
+isbn = {978-3-642-41085-7},
+mendeley-groups = {PhD Thesis/Softening},
+publisher = {Springer Berlin Heidelberg},
+series = {Springer Series in Materials Science},
+title = {{Ferroelectric Crystals for Photonic Applications}},
+url = {http://link.springer.com/10.1007/978-3-642-41086-4},
+volume = {91},
+year = {2014}
+}
+
